--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
     <link rel="icon" href="/img/weather.png">
 
 </head>
@@ -14,6 +13,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created to learn how to setup web servers.</p>
         <img class="portrait" src="/img/kiwi.jpeg">
     </div>
     {{>footer}}
